# MerkleVerse

./: .gitignore  Cargo.toml  README.md  build.rs  gen_config.sh
bench/: bench_transaction.js  orchestrate.py  package-lock.json  package.json  run_all.sh  script.js  utils.js
config/: cluster.toml  peergroups.toml  poc.toml
config/cluster_res/: srv_0.toml  srv_1.toml  srv_10.toml  srv_11.toml  srv_12.toml  srv_13.toml  srv_2.toml  srv_3.toml  srv_4.toml  srv_5.toml  srv_6.toml  srv_7.toml  srv_8.toml  srv_9.toml
proto/: inner.proto  mverse.proto  outer.proto
src/: args.rs  bridge.rs  config.rs  main.rs  metaconfig.rs  server.rs  utils.rs
src/grpc_handler/: converter.rs  inner.rs  mod.rs  outer.rs
src/server/: messages.rs  mod.rs  mverse.rs  synchronization.rs  transactions.rs  validation.rs
tools/: encode_b64.py
