[package]
name = "MerkleVerseWrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
anyhow = "1.0"
bytes = "1"
config = {version="0.13.1", features = ["toml"]}
serde = {version="1.0", features = ["derive"]}
base64 = "0.21.2"
clap = { version = "4.3.23", features = ["derive"] }
futures = "0.3"
bls-signatures = "0.15"
ed25519-dalek = "2"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.9.2"
